# CairoPlot

./: .gitignore  CHANGELOG  README.md  TODO  meson.build  org.gnome.plotter.json
data/: meson.build  org.gnome.plotter.appdata.xml.in  org.gnome.plotter.desktop.in  org.gnome.plotter.gschema.xml
po/: POTFILES  meson.build
src/: cairoplot-window.cpp  cairoplot-window.hpp  cairoplot.gresource.xml  main.cpp  meson.build  plotter.cpp  plotter.hpp  plotterevents.cpp  plotterlabels.cpp  plotteroptions.cpp  plotterthemes.cpp  plotterwidgets.cpp
subprojects/libcairoplot/: meson.build  plotter.cpp  plotter.hpp  plottercoords.cpp  plotterevents.cpp  plotterlabels.cpp  plotteroptions.cpp  plotterseries.cpp  plotterthemes.cpp  plotterwidgets.cpp
